--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -14,7 +14,7 @@ jobs:
       SHA: ${{ github.event.pull_request.head.sha }}
     steps:
       - run: echo "$SHA" >> CommitHash.txt
-
+      - run: echo "$SHA"
       - name: Commit and push changes
         run: |
           git config user.name github-actions
