--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -17,8 +17,8 @@ jobs:
       - run: echo "$SHA"
       - name: Commit and push changes
         run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.name kouki928
+          git config user.email furukawavo@gmail.com
           git add CommitHash.txt
           git commit -m "Add short commit hash"
           git push
