--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -1,16 +1,13 @@
 name: Generate CommitHash.txt
 
 on:
-  pull_request:
-    branches:
-      - main
-    types: [closed]
+  push:
 
 jobs:
   generate_commit_hash:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     env:
-      SHA: ${{ github.event.pull_request.head.sha }}
+      SHA: ${{ github.event.pull_request.head.sha:0:6 }}
     steps:
       - run: echo "$SHA" >> CommitHash.txt
