--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -8,6 +8,6 @@ jobs:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     env:
-      SHA: ${{ github.event.pull_request.head.sha:0:6 }}
+      SHA: ${{ github.event.pull_request.head.sha }}
     steps:
-      - run: echo "$SHA" >> CommitHash.txt
+      - run: echo "${SHA:0:4}" >> CommitHash.txt
