--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -10,6 +10,6 @@ jobs:
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
     steps:
-      - run: echo "${SHA:0:4}" >> CommitHash.txt
+    #   - run: echo "${SHA:0:4}" >> CommitHash.txt
       - run: echo "${SHA}"
       - run: echo "${SHA:0:4}"
