--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -1,7 +1,10 @@
 name: Generate CommitHash.txt
 
 on:
-  push:
+  pull_request:
+    branches:
+      - main
+    types: [closed]
 
 jobs:
   generate_commit_hash:
@@ -10,6 +13,5 @@ jobs:
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
     steps:
-    #   - run: echo "${SHA:0:4}" >> CommitHash.txt
-      - run: echo "${SHA}"
-      - run: echo "${SHA:0:4}"
+      - run: echo "$SHA" >> CommitHash.txt
+      - run: echo ${SHA::6}
