--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -13,5 +13,4 @@ jobs:
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
     steps:
-      - run: echo "$SHA" >> CommitHash.txt
-      - run: echo "${SHA::6}""
+      - run: echo "${SHA::6}" >> Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
