--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -14,4 +14,4 @@ jobs:
       SHA: ${{ github.event.pull_request.head.sha }}
     steps:
       - name: Write commit hash
-        run: echo "${SHA::6}" > test/test/CommitHash.txt
+        run: echo "${SHA::6}" > /test/test/CommitHash.txt
