--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -14,7 +14,7 @@ jobs:
       SHA: ${{ github.event.pull_request.head.sha }}
     steps:
       - name: Create directory
-        run: mkdir -p path/to/directory
+        run: mkdir -p test/test/
 
       - name: Write commit hash
-        run: echo "${SHA::6}" > path/to/directory/CommitHash.txt
+        run: echo "${SHA::6}" > test/test/CommitHash.txt
