--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -18,3 +18,11 @@ jobs:
 
       - name: Write commit hash
         run: echo "${SHA::6}" > test/test/CommitHash.txt
+
+      - name: commit push
+        run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git add test/test/CommitHash.txt
+          git commit -m "Add short commit hash"
+          git push
