--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -29,6 +29,6 @@ jobs:
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add Hutzper.Library.FormsMekiki/x64/CommitHash.txt
+          git add -f Hutzper.Library.FormsMekiki/x64/CommitHash.txt
           git commit -m "Add short commit hash"
           git push
