--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -20,15 +20,15 @@ jobs:
         run: git config --global --add safe.directory $(pwd)
 
       - name: Create directory
-        run: mkdir -p Hutzper.Library.FormsMekiki/x64/
+        run: mkdir -p Hutzper.Library.FormsMekiki/bin/x64/
 
       - name: Write commit hash
-        run: echo "${SHA::6}" > Hutzper.Library.FormsMekiki/x64/CommitHash.txt
+        run: echo "${SHA::6}" > Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
 
       - name: commit push
         run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git add -f Hutzper.Library.FormsMekiki/x64/CommitHash.txt
+          git add -f Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
           git commit -m "Add short commit hash"
           git push
