--- a/.gitignore
+++ b/.gitignore
@@ -21,9 +21,8 @@ mono_crash.*
 [Dd]ebugPublic/
 [Rr]elease/
 [Rr]eleases/
-x64/*
-!**/x64/CommitHash.txt
-!**/debug/CommitHash.txt
+x64/
+!**/CommitHash.txt
 x86/
 [Ww][Ii][Nn]32/
 [Aa][Rr][Mm]/
