--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -6,6 +6,7 @@ on:
 
 jobs:
   generate_commit_hash:
+    if: github.actor != 'github-actions'
     runs-on: ubuntu-latest
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
