--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Write commit hash
         run: echo "${SHA::6}" > Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
 
-      - name: Get current branch name
-        id: branch_name
-        run: echo "::set-output name=branch::$(git rev-parse --abbrev-ref HEAD)"
+      - name: Get release branch name
+        id: get_branch
+        run: echo "RELEASE_BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: commit push
         run: |
