--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -29,9 +29,9 @@ jobs:
       - name: Write commit hash
         run: echo "${SHA::6}" > Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
 
-      - name: Get current branch name
-        id: branch_name
-        run: echo "::set-output name=branch::$(git rev-parse --abbrev-ref HEAD)"
+      # - name: Get release branch name
+      #   id: get_branch
+      #   run: echo "RELEASE_BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: commit push
         run: |
@@ -40,4 +40,4 @@ jobs:
           git config advice.addIgnoredFile false
           git add -f Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
           git commit -m "Add short commit hash"
-          git push origin HEAD:${{ github.event.pull_request.head.ref }} --force
+          git push origin HEAD:${{ github.head_ref }} --force
