--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -1,7 +1,7 @@
 name: Generate CommitHash.txt
 
 on:
-  pull_request:
+  push:
     branches: 
       - main
     paths-ignore:
@@ -28,10 +28,6 @@ jobs:
 
       - name: Write commit hash
         run: echo "${SHA::6}" > Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
-
-      # - name: Get release branch name
-      #   id: get_branch
-      #   run: echo "RELEASE_BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: commit push
         run: |
