--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -9,6 +9,7 @@ on:
 
 jobs:
   generate_commit_hash:
+    if: github.actor != 'github-actions'
     runs-on: ubuntu-latest
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
@@ -28,10 +29,6 @@ jobs:
 
       - name: Write commit hash
         run: echo "${SHA::6}" > Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
-
-      # - name: Get release branch name
-      #   id: get_branch
-      #   run: echo "RELEASE_BRANCH_NAME=${GITHUB_REF#refs/heads/}" >> $GITHUB_ENV
 
       - name: commit push
         run: |
