--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -4,6 +4,8 @@ on:
   pull_request:
     branches: 
       - main
+    paths-ignore:
+      - "**/CommitHash.txt"
 
 jobs:
   generate_commit_hash:
@@ -40,7 +42,7 @@ jobs:
 
       - name: Commit and push
         run: |
-          if [ "$(steps.check_file.outputs.check_file)" == "File exists" ]; then
+          if [ "$(steps.check_file.outputs.check_file)" != "File exists" ]; then
             git config user.name github-actions
             git config user.email github-actions@github.com
             git config advice.addIgnoredFile false
