--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -39,7 +39,7 @@ jobs:
       - name: commit push
         run: |
           git config user.name github-actions
-          git config user.email github-actions@github.com
+          git config user.email action@github.com
           git config advice.addIgnoredFile false
           git add -f Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
           git commit -m "Add short commit hash"
