--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -21,6 +21,9 @@ jobs:
       - name: Check Actor
         run: echo ${{ github.actor }}
 
+      - name: Get last committer username
+        run: echo "Last committer is ${{ github.event.head_commit.committer.username }}"
+
       - name: Checkout
         uses: actions/checkout@v3
         with:
