--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -21,13 +21,14 @@ jobs:
       - name: Check Actor
         run: echo ${{ github.actor }}
 
-      - name: Get last committer username
-        run: echo "Last committer is ${{ github.event.head_commit.committer.username }}"
-
       - name: Checkout
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      
+      - name: Get last committer username
+        run: echo "Last committer is ${{ github.event.before }}"
       
       # 安全な directory であると明記
       - name: safe dirctory
