--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -28,7 +28,7 @@ jobs:
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
       
       - name: Get last committer username
-        run: echo "Last committer is ${{ github.event.before }}"
+        run: echo Last committer is $(git log -1 --pretty=format:'%an')
       
       # 安全な directory であると明記
       - name: safe dirctory
