--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -47,4 +47,4 @@ jobs:
           git config advice.addIgnoredFile false
           git add -f Hutzper.Library.FormsMekiki/bin/x64/CommitHash.txt
           git commit -m "Add short commit hash"
-          # git push origin HEAD:${{ github.head_ref }} --force
+          git push origin HEAD:${{ github.head_ref }} --force
