--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -12,7 +12,7 @@ on:
 
 jobs:
   generate_commit_hash:
-    if: github.actor != 'github-actions'
+    if: github.actor != 'github-actions' && github.event_name != 'pull_request_target'
     runs-on: ubuntu-latest
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
