--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -2,8 +2,9 @@ name: Generate CommitHash.txt
 
 on:
   pull_request:
-    branches: [main]
-    types: [closed]  
+    types: [closed]
+    branches: 
+      - main
 
 jobs:
   generate_commit_hash:
