--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -2,7 +2,9 @@ name: format_and_commit
 
 on:
   pull_request:
-    type: [closed]
+    types: [closed]
+    branches: [main]
+
 permissions: write-all
 jobs:
   formatter:
