--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -3,6 +3,8 @@ name: format_and_commit
 on:
   pull_request:
     types: [closed]
+    branches: [main]
+
 permissions: write-all
 jobs:
   formatter:
@@ -17,6 +19,9 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+      
+      - name: Check name
+        run: echo ${{ github.actor }}
 
       - name: Create directory
         run: mkdir -p Hutzper.Library.FormsMekiki/bin/x64/
