--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -2,10 +2,7 @@ name: format_and_commit
 
 on:
   pull_request:
-    types: [closed]
     branches: [main]
-
-permissions: write-all
 jobs:
   formatter:
     runs-on: ubuntu-latest
@@ -24,10 +21,12 @@ jobs:
         run: echo ${{ github.actor }}
 
       - name: Check pusher
-        run : echo "pusher is ${{ github.event.pusher.name }}"
+        run : echo "pusher is ${{ github.event.before }}"
 
-      - name: Commit Message
-        run : echo "COMMIT_MESSAGE=$(git log -1 --pretty=format:'%s')"
+      - name: Get last commit author name
+        run: |
+          git log -1 --pretty=format:'%an'
+        id: last_commit_author_name
 
       - name: Create directory
         run: mkdir -p Hutzper.Library.FormsMekiki/bin/x64/
