--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -13,6 +13,7 @@ jobs:
       - name: Checktest
         uses: actions/checkout@v3
         with:
+          fetch-depth: 0
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
 
       - name: Get last commit author name
@@ -25,6 +26,8 @@ jobs:
           if $LAST_COMMIT_AUTHOR_NAME == 'GitHub Action' ; then
             echo "Last commiter is Github_Action."
             exit 1
+          else
+            echo "Committed by user"
           fi
 
       - name: Create directory
