--- a/.github/workflows/commit-hash.yml
+++ b/.github/workflows/commit-hash.yml
@@ -7,6 +7,7 @@ on:
 jobs:
   formatter:
     runs-on: ubuntu-latest
+    
     env:
       SHA: ${{ github.event.pull_request.head.sha }}
       file: ${{ github.event.pull_request.changed_files }}
@@ -20,6 +21,25 @@ jobs:
           fetch-depth: 0
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+
+      - name: Changed Files
+        uses: tj-actions/changed-files@v44
+        
+      - name: Get changed files
+        id: changed-files
+        uses: tj-actions/changed-files@v44
+        # To compare changes between the current commit and the last pushed remote commit set `since_last_remote_commit: true`. e.g
+        # with:
+        #   since_last_remote_commit: true 
+
+      - name: List all changed files
+        env:
+          ALL_CHANGED_FILES: ${{ steps.changed-files.outputs.all_changed_files }}
+        run: |
+          for file in ${ALL_CHANGED_FILES}; do
+            echo "$file was changed"
+          done
+      
 
       - name: change files
         run :
